--- a/oracle-8/Dockerfile
+++ b/oracle-8/Dockerfile
@@ -1,7 +1,7 @@
 FROM majid7221/debian:stretch
 
 RUN set -ex \
-    && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 \
+    && apt-key adv --no-tty --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 \
     && echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" > /etc/apt/sources.list.d/webupd8team-java.list \
     && echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
     && mkdir /usr/share/man/man1 \
