--- a/oracle-11/Dockerfile
+++ b/oracle-11/Dockerfile
@@ -2,7 +2,7 @@ FROM majid7221/debian:stretch
 
 RUN set -ex \
     && apt-key adv --no-tty --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EA8CACC073C3DB2A \
-    && echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu bionic main" | sudo tee /etc/apt/sources.list.d/linuxuprising-java.list \
+    && echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu bionic main" | tee /etc/apt/sources.list.d/linuxuprising-java.list \
     && echo oracle-java11-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
     && mkdir /usr/share/man/man1 \
     && apt-get update \
